# serializer version: 1
# name: test_snapshots[cct][light.wled_cct_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Rotozoomer',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_cct_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[cct][light.wled_cct_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 255,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.COLOR_TEMP: 'color_temp'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: 2942,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Solid',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Rotozoomer',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED CCT light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        27.924,
        58.494,
      ),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6535,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        175,
        106,
      ),
      <LightEntityStateAttribute.RGBW_COLOR: 'rgbw_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.501,
        0.384,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_cct_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 255,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Solid',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        218.906,
        50.196,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        127,
        172,
        255,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_main-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EntityCapabilityAttribute.GROUP_ENTITIES: 'group_entities'>: list([
        'light.wled_rgb_light',
        'light.wled_rgb_light_segment_1',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light_main',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Main',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Main',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'main',
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_main-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.BRIGHTNESS: 'brightness'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light Main',
      <EntityCapabilityAttribute.GROUP_ENTITIES: 'group_entities'>: list([
        'light.wled_rgb_light',
        'light.wled_rgb_light_segment_1',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light_main',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_segment_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light_segment_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Segment 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb][light.wled_rgb_light_segment_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 255,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Wipe',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light Segment 1',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        40.0,
        100.0,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        170,
        0,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.555,
        0.422,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light_segment_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb_single_segment][light.wled_rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgb_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_single_segment][light.wled_rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Solid',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        218.906,
        50.196,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        127,
        172,
        255,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgb_websocket][light.wled_websocket-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_websocket',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgb_websocket][light.wled_websocket-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Solid',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED WebSocket',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        218.906,
        50.196,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        127,
        172,
        255,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.208,
        0.217,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_websocket',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_snapshots[rgbw][light.wled_rgbw_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.wled_rgbw_light',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 36>,
    'translation_key': 'segment',
    'unique_id': 'aabbccddeeff_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[rgbw][light.wled_rgbw_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGBW: 'rgbw'>,
      <LightEntityStateAttribute.EFFECT: 'effect'>: 'Solid',
      <LightEntityCapabilityAttribute.EFFECT_LIST: 'effect_list'>: list([
        'Solid',
        'Blink',
        'Breathe',
        'Wipe',
        'Wipe Random',
        'Random Colors',
        'Sweep',
        'Dynamic',
        'Colorloop',
        'Rainbow',
        'Scan',
        'Scan Dual',
        'Fade',
        'Theater',
        'Theater Rainbow',
        'Running',
        'Saw',
        'Twinkle',
        'Dissolve',
        'Dissolve Rnd',
        'Sparkle',
        'Sparkle Dark',
        'Sparkle+',
        'Strobe',
        'Strobe Rainbow',
        'Strobe Mega',
        'Blink Rainbow',
        'Android',
        'Chase',
        'Chase Random',
        'Chase Rainbow',
        'Chase Flash',
        'Chase Flash Rnd',
        'Rainbow Runner',
        'Colorful',
        'Traffic Light',
        'Sweep Random',
        'Chase 2',
        'Aurora',
        'Stream',
        'Scanner',
        'Lighthouse',
        'Fireworks',
        'Rain',
        'Tetrix',
        'Fire Flicker',
        'Gradient',
        'Loading',
        'Rolling Balls',
        'Fairy',
        'Two Dots',
        'Fairytwinkle',
        'Running Dual',
        'Chase 3',
        'Tri Wipe',
        'Tri Fade',
        'Lightning',
        'ICU',
        'Multi Comet',
        'Scanner Dual',
        'Stream 2',
        'Oscillate',
        'Pride 2015',
        'Juggle',
        'Palette',
        'Fire 2012',
        'Colorwaves',
        'Bpm',
        'Fill Noise',
        'Noise 1',
        'Noise 2',
        'Noise 3',
        'Noise 4',
        'Colortwinkles',
        'Lake',
        'Meteor',
        'Meteor Smooth',
        'Railway',
        'Ripple',
        'Twinklefox',
        'Twinklecat',
        'Halloween Eyes',
        'Solid Pattern',
        'Solid Pattern Tri',
        'Spots',
        'Spots Fade',
        'Glitter',
        'Candle',
        'Fireworks Starburst',
        'Fireworks 1D',
        'Bouncing Balls',
        'Sinelon',
        'Sinelon Dual',
        'Sinelon Rainbow',
        'Popcorn',
        'Drip',
        'Plasma',
        'Percent',
        'Ripple Rainbow',
        'Heartbeat',
        'Pacifica',
        'Candle Multi',
        'Solid Glitter',
        'Sunrise',
        'Phased',
        'Twinkleup',
        'Noise Pal',
        'Sine',
        'Phased Noise',
        'Flow',
        'Chunchun',
        'Dancing Shadows',
        'Washing Machine',
        'Blends',
        'TV Simulator',
        'Dynamic Smooth',
        'Spaceships',
        'Crazy Bees',
        'Ghost Rider',
        'Blobs',
        'Scrolling Text',
        'Drift Rose',
        'Distortion Waves',
        'Soap',
        'Octopus',
        'Waving Cell',
        'Pixels',
        'Pixelwave',
        'Juggles',
        'Matripix',
        'Gravimeter',
        'Plasmoid',
        'Puddles',
        'Midnoise',
        'Noisemeter',
        'Freqwave',
        'Freqmatrix',
        'GEQ',
        'Waterfall',
        'Freqpixels',
        'Noisefire',
        'Puddlepeak',
        'Noisemove',
        'Noise2D',
        'Perlin Move',
        'Ripple Peak',
        'Firenoise',
        'Squared Swirl',
        'DNA',
        'Matrix',
        'Metaballs',
        'Freqmap',
        'Gravcenter',
        'Gravcentric',
        'Gravfreq',
        'DJ Light',
        'Funky Plank',
        'Pulser',
        'Blurz',
        'Drift',
        'Waverly',
        'Sun Radiation',
        'Colored Bursts',
        'Julia',
        'Game Of Life',
        'Tartan',
        'Polar Lights',
        'Swirl',
        'Lissajous',
        'Frizzles',
        'Plasma Ball',
        'Flow Stripe',
        'Hiphotic',
        'Sindots',
        'DNA Spiral',
        'Black Hole',
        'Wavesins',
        'Rocktaves',
        'Akemi',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGBW Light',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        0.0,
        64.706,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        90,
        90,
      ),
      <LightEntityStateAttribute.RGBW_COLOR: 'rgbw_color'>: tuple(
        255,
        0,
        0,
        139,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 36>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.6,
        0.307,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.wled_rgbw_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
